@@ -17,6 +17,7 @@ Changelog for 1.3.38
 * Fixed start and end dates not shown on contact screen (Chris T, 979)
 * Fixed employee showing up several times on search list (Chris T, 980)
 * Fixed contact description not preserved on edit (Chris T, 981)
+* Fixed useless buttons on credit div when no account active (Chris T, 1001)
 
 Changelog for 1.3.37
 * 1.3-1.2 downgrade now drops extensions (Chris T, 943)
